# puzzle_solver

./: Cargo.toml  README.md  dodeca.html  index.html  index.js  original.html
gui/: Cargo.toml
gui/src/: lib.rs
native/: Cargo.toml
native/src/: main.rs
pkg/: package.json  web.d.ts  web.js  web_bg.wasm  web_bg.wasm.d.ts
pkg_dodeca/: web.d.ts  web.js  web_bg.wasm  web_bg.wasm.d.ts
pkg_original/: web.js
solvers/: Cargo.toml
solvers/src/: common.rs  constraints.rs  dodeca.rs  lib.rs  volume.rs
src/: app.rs  common.rs  lib.rs  main.rs  volume.rs
web/: Cargo.toml  index.html
web/src/: lib.rs
