[package]
name = "puzzle100"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayvec = "0.7.6"
env_logger = "0.11.6"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.25"
three-d = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
